--- a/styles.css
+++ b/styles.css
@@ -1,409 +1,170 @@
-:root{
-    --color-one: #22223b;
-    --color-two: #4a4e69;
-    --color-three: #9289a0;
-    --color-four: #c9ada7;
-    --color-five: #f2e9e4;
-    --color-six: #f1f1f1;
-    --color-seven: #9a8c98;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
+
+html {
+  background: #101418;
 }
 
-body{
-    background-image: repeating-linear-gradient(135deg, var(--color-two), var(--color-seven), var(--color-four));
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
-h1{
-    color: var(--color-six);
+/* HEADER */
+.header-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1300px;
+  margin: auto;
+  padding: 20px;
 }
 
-h2{
-    color: var(--color-five);
+button {
+  background: #1a53ff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 12px;
+  cursor: pointer;
 }
 
-h3{
-    color: var(--color-one);
+/* HERO */
+.hero {
+  text-align: center;
+  height: 60vh;
+  background: #181f26;
+  margin-bottom: 80px;
+  margin-top: -70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
 }
 
-p{
-    color: var(--color-six);
+.hero h1 {
+  font-size: 3rem;
+  max-width: 700px;
 }
 
-#intro{
-    background-image: radial-gradient(var(--color-three) 2%, var(--color-two));
-    padding: 2rem 0 1rem 0;
-    text-align: center;
-    margin: 0 0 -3.6rem 0;
+.hero p {
+  margin-top: 10px;
+  opacity: 0.6;
+  font-size: 1.3rem;
 }
 
-#intro h1 {
-    margin: 0;
+.profile-img {
+  width: 180px;
+  height: 180px;
+  border-radius: 9999px;
+  border: 5px solid #1a53ff;
+}
+
+h2 {
+  font-size: 2rem;
+  margin-bottom: 15px;
+}
+
+/* ABOUT */
+.about-wrapper,
+.project-wrapper,
+.socials-wrapper {
+  max-width: 1000px;
+  margin: 100px auto;
+  margin-top: 0;
+  padding: 20px;
+}
+
+.about-wrapper {
+  justify-content: center;
+  display: flex;
+}
+
+.about-wrapper .col p {
+  line-height: 32px;
+}
+
+.about-wrapper .col {
+  flex: 1;
+}
+
+.about-wrapper .skills {
+  margin-left: 50px;
+}
+
+.about-wrapper .skills ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.about-wrapper .skills ul li {
+  border: 2px solid #2d2d2d;
+  width: max-content;
+  padding: 3px 10px;
+  border-radius: 12px;
+  margin: 7px;
+  margin-left: 0;
+  font-weight: 500;
+}
+
+/* PROJECTS */
+.projects ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects ul li {
+  background: #181f26;
+  margin: 13px;
+  margin-left: 0;
+  padding: 10px;
+  border-radius: 15px;
+  width: 300px;
+}
+
+.projects ul li img {
+  border-radius: 15px;
+  margin-bottom: 17px;
+  width: 100%;
+}
+
+/* SOCIALS */
+.socials-wrapper {
+  line-height: 30px;
+}
+
+.socials-wrapper .social-icons img {
+  border: 2px solid #2d2d2d;
+  margin-right: 20px;
+  margin-top: 20px;
+  padding: 6px;
+  border-radius: 12px;
+}
+
+.socials-wrapper .social-icons img:hover {
+  background: #2d2d2d;
+}
+
+/* MOBILE */
+@media screen and (max-width: 768px) {
+  .hero h1 {
     font-size: 2rem;
-    color: var(--color-six);
-}
-  
-#intro p {
-    color: var(--color-one);
-    font-size: 1rem;
-    margin-bottom: 4rem;
-}
+  }
 
-header{
-    margin: 0;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-}
-
-header nav {
-    background-color: var(--color-two);
-    display: flex;
-    justify-content: center;
-    padding: 0;
-}
-
-header nav ul{
-    list-style-type: none;
-    display: flex;
-}
-
-header nav li {
-    margin: 0 1rem;
-}
-
-header nav a {
-    text-decoration: none;
-    color: var(--color-five);
-    font-weight: bold;
-    display: block;
-    padding: 0.2rem;
-}
-
-header nav a:hover{
-    color: var(--color-four);
-    font-size: 102%;
-}
-
-#mobile-only{
-    display: none;
-}
-
-main {
-    padding: 0 2rem;
-}
-
-main section {
-    margin-bottom: 2rem;
-}
-
-#about div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#about img{
-    border-radius: 20%;
-    width: auto;
-    height: 50vh;
-}
-
-#about img:hover{
-    transform: scale(101%);
-}
-
-#sub-content{
-    width: 50%;
-    margin: auto 1rem;
-    display: flex;
+  .about-wrapper {
     flex-direction: column;
-}
+  }
 
-#sub-content p{
-    color: var(--color-five);
-    margin: 0.4rem 0;
-}
+  .about-wrapper .skills {
+    margin-left: 0;
+    margin-top: 100px;
+  }
 
-main h2 {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
-}
-
-main p {
-    line-height: 1.5;
-}
-
-
-#projects{
-    scroll-margin-top: 4rem;
-}
-
-.project-list {
-    display: flex;
-    padding: 0 1rem;
-    list-style: none;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.project-list li {
-    margin: 1rem 0.5rem;
-    padding: 1rem;
-    height: auto;
-    width: 40%;
-    background-color: var(--color-three);
-    border-radius: 1rem;
-}
-
-.project-list li:hover{
-    transform: scale(101%);
-    background-color: var(--color-seven);
-}
-
-.project-list li img{
-    max-width: 100%;
-}
-
-.project-list p{
-    color: var(--color-one);
-}
-
-.project-list h3 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.project-list a {
-  text-decoration: none;
-  color: var(--color-two);
-}
-
-.project-list a {
-    text-decoration: none;
-    color: var(--color-two);
-}
-
-.project-list a:hover {
-    text-decoration: none;
-    color: var(--color-one);
-}
-
-#certifications{
-    scroll-margin-top: 4rem;
-}
-
-.certifications-list {
-    display: flex;
-    padding: 0 1rem;
-    list-style: none;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.certifications-list li {
-    margin: 1rem 0.5rem;
-    padding: 1rem;
-    height: auto;
-    width: 40%;
-    background-color: var(--color-three);
-    flex-grow: 0.5;
-    border-radius: 1rem;
-}
-
-.certifications-list li:hover{
-    transform: scale(101%);
-    background-color: var(--color-seven);
-}
-
-.certifications-list li div{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.certifications-list p{
-    color: var(--color-one);
-}
-
-.certifications-list h3 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.certifications-list a {
-  text-decoration: none;
-  color: var(--color-two);
-}
-
-.certifications-list a {
-    text-decoration: none;
-    color: var(--color-two);
-}
-
-.certifications-list a:hover {
-    text-decoration: none;
-    color: var(--color-one);
-}
-
-.certifications-list li hr{
-    border-bottom: 1px solid var(--color-two);
-    margin: -10px 0;
-    width: 50%;
-}
-
-#contact{
-    scroll-margin-top: 4rem;
-}
-
-#contact ul{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-}
-
-#contact ul li{
-    padding: 1rem;
-    border-bottom: 1px solid var(--color-two);
-    width: 25%;
-    border-bottom-left-radius: 0.3rem;
-}
-
-#contact ul li a{
-    text-decoration: none;
-    color: var(--color-two);
-}
-
-#contact ul li a:hover{
-    color: var(--color-one);
-}
-
-footer{
-    background-color: var(--color-two);
-    display: flex;
-    justify-content: center;
-}
-
-footer p{
-    color: var(--color-six);
-}
-
-#credits{
-    text-align: end;
-}
-
-#credits p{
-    color: var(--color-one);
-}
-
-#credits a{
-    text-decoration: none;
-    color: var(--color-two);
-    padding: 0.2rem;
-}
-
-@media screen and (max-width: 600px) {
-    #intro{
-        padding: 2rem 0 1rem 0;
-        margin: 0 0 -3.6rem 0;
-        width: 100vw;
-    }
-    
-    #intro h1 {
-        font-size: 1.2rem;
-        text-align: center;
-    }
-      
-    #intro p {
-        text-align: center;
-    }
-
-    header nav{
-        display: none;
-    }
-
-    #mobile-only{
-        background-color: var(--color-two);
-        display: flex;
-        justify-content: center;
-        padding: 0;
-    }
-    
-    #mobile-only ul{
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    #mobile-only li {
-        margin: 0 1rem;
-        font-size: 1rem;
-    }
-    
-    #mobile-only a {
-        text-decoration: none;
-        color: var(--color-five);
-        font-weight: bold;
-        display: block;
-        padding: 0.2rem;
-    }
-    
-    #mobile-only a:hover{
-        color: var(--color-four);
-        font-size: 102%;
-    }
-
-    #about h3{
-        font-size: 1rem;
-    }
-
-    #about p{
-        font-size: 1rem;
-    }
-
-    #about div{
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        width: 100%;
-    }
-
-    #about h3{
-        color: var(--color-four);
-    }
-
-    #about img{
-        border-radius: 10%;
-        width: 40vh;
-        height: auto;
-    }
-
-    #projects{
-        scroll-margin-top: 10rem;
-        padding: 0;
-    }
-    
-    .project-list li {
-        margin: 1rem 0;
-        width: 100vw;
-    }
-
-    #certifications{
-        scroll-margin-top: 10rem;
-    }
-
-    .certifications-list li {
-        margin: 1rem 0;
-        width: 100vw;
-    }
-
-    #contact{
-        scroll-margin-top: 10rem;
-    }
-    
-    #contact ul{
-        flex-direction: column;
-    }
+  .projects ul li {
+    width: 100%;
+  }
 }
